<resources>
    <string name="app_name">路面监控</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="loading">加载中……</string>
    <string name="transition_dialog">transition_dialog</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="organization">组织机构</string>
    <string name="company">南京六的平方信息技术有限公司</string>

    <!--登陆模块-->
    <string name="system_name">沥青路面施工管控一体化系统</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login_company">By：南京六的平方信息技术有限公司</string>
    <string name="login_copyright">Copyright 2015-2017</string>
    <string name="upload">登陆</string>
    <string name="error">用户名或密码错误</string>

    <!--主页MainActivity模块-->
    <string name="laboratory">试验室</string>
    <string name="concrete">混凝土</string>
    <string name="banhezhan">拌合站</string>
    <string name="asphalt">沥青</string>
    <string name="pavesite">摊铺现场</string>
    <string name="alarm_level">报警等级</string>
    <string name="zongpanshu">总盘数:</string>
    <string name="zongfangliang">总方量:</string>
    <string name="overproof_count">超标盘数</string>
    <string name="overproof_rate">超标率</string>
    <string name="handle_count">处置盘数</string>
    <string name="handle_rate">处置率</string>
    <string name="elementary_ranking">初级</string>
    <string name="middle_ranking">中级</string>
    <string name="high_ranking">高级</string>

    <!--选择查询对话框模块-->
    <string name="select_start_time">开始时间</string>
    <string name="select_end_time">结束时间</string>
    <string name="select_equipment">选择设备</string>
    <string name="select_test_type">选择类型</string>

    <!--主页LaboratoryActivity模块-->
    <string name="yaliji">压力试验</string>
    <string name="wannengji">万能试验</string>
    <string name="statistic">统计分析</string>
    <string name="disqualification">不合格</string>
    <string name="detail">详情</string>

    <!--主页ConcreteActivity模块-->
    <string name="produce_query">生产查询</string>
    <string name="day_produce_query">日生产查询</string>
    <string name="overproof">超标处置</string>
    <string name="material_statistic">材料核算</string>
    <string name="deviation">误差(kg)</string>
    <string name="deviation_rate">误差率(%)</string>
    <string name="matching">配比(kg)</string>
    <string name="reality">实际(kg)</string>
    <string name="material_name">材料名称</string>
    <string name="total_Statistics">综合统计</string>
    <string name="tanpu_wendu">摊铺温度</string>
    <string name="pave_speed">摊铺速度</string>
    <string name="pave_site">摊铺现场</string>
    <string name="pave_data">摊铺数据</string>
    <string name="nianya_data">碾压数据</string>
    <string name="location">实时定位</string>
    <string name="outlet_temp">出料口温度</string>
    <string name="monitor">实时监控</string>


    <!--主页PitchActivity模块-->
    <string name="comprehensive_statistic">综合统计</string>
    <!--版本更新模块-->
    <string name="check_update">检测更新</string>
    <string name="update">更新</string>

    <!--详情页模块-->
    <string name="handle_person">处置人</string>
    <string name="handle_time">处置时间</string>
    <string name="handle_reason">处置原因</string>
    <string name="handle_way">处置方式</string>
    <string name="handle_result">处置结果</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="confirm">确定</string>
    <string name="abandon">放弃</string>
    <string name="approve_person">审批人</string>
    <string name="examine_result">监理结果</string>
    <string name="examine_approve">监理审批</string>
    <string name="confirm_time">确认时间</string>
    <string name="approve_time">审批时间</string>


    <!-- ■■ 日生产量统计  ■■ -->
    <string name="richanliang_shebeibianhao">设备编号：</string>
    <string name="richanliang_dailycl">每日产量(kg)：</string>
    <string name="richanliang_dailyps">每日盘数(kg)：</string>

    <string name="richanliang_shigongzhuanghao">施工桩号：</string>
    <string name="richanliang_caijichanliang">采集产量(kg)：</string>
    <string name="richanliang_panshu">盘数：</string>
    <string name="richanliang_xiuzhengchanliang">修正产量(kg)：</string>
    <string name="richanliang_midu">密度(kg/m³)：</string>
    <string name="richanliang_chang">长(m)：</string>
    <string name="richanliang_kuan">宽(m)：</string>
    <string name="richanliang_hou">厚(cm)：</string>
    <string name="richanliang_caijichanliang_un">采集产量：</string>
    <string name="richanliang_xiuzhengchanliang_un">修正产量：</string>
    <string name="richanliang_midu_un">密度：</string>
    <string name="richanliang_chang_un">长：</string>
    <string name="richanliang_kuan_un">宽：</string>
    <string name="richanliang_hou_un">厚：</string>
    <string name="richanliang_hou_desc">(不能输入，自动计算)</string>
    <string name="richanliang_xinghao">型号</string>
    <string name="richanliang_beizhu">备注</string>

    <!-- ■■ 日生产量统计详情  ■■ -->
    <string name="richanliang_xq_title">日生产量统计详情</string>
    <string name="richanliang_xq_biaozhunmidu">标准密度：</string>
    <string name="richanliang_changdu_un">长度：</string>
    <string name="richanliang_kuandu_un">宽度：</string>
    <string name="richanliang_houdu_un">厚度：</string>
    <string name="richanliang_shejihoudu">设计厚度：</string>
    <string name="comm_submit">提交</string>
    <string name="comm_jisuan">计算</string>
    <string name="comm_cancle">放弃</string>
    <string name="comm_search">查询</string>

    <string name="paving_site">摊铺现场</string>
    <string name="rolling_temperture">碾压温度</string>
    <string name="rolling_speed">碾压速度</string>
    <string name="caijishijian">采集时间</string>
    <string name="wendu">温度℃</string>
    <string name="nianyasudu_sudu">速度(km/h)</string>
    <string name="shebeimingcheng">设备名称</string>


    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <string name="equipment">设备名称</string>
</resources>
