<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_login_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_grey_50"
    android:fadingEdge="none"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/ll_container_login_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/iv_login_register_activity"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_name"
            android:textColor="@color/base_color"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="50dp"
            app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceLoginError"
            app:theme="@style/MaterialLoginTheme.TextAppearanceLogin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_person_outline_blue_500_18dp"
                android:hint="@string/input_username"
                android:singleLine="true"
                android:textSize="@dimen/login_register_editview_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceLoginError"
            app:theme="@style/MaterialLoginTheme.TextAppearanceLogin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_lock_outline_blue_500_18dp"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/login_register_editview_text_size" />
        </android.support.design.widget.TextInputLayout>

        <com.dd.CircularProgressButton
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/cpb_white"
            android:textSize="15sp"
            app:cpb_cornerRadius="40dp"
            app:cpb_iconComplete="@drawable/ic_action_accept"
            app:cpb_textIdle="@string/upload" />


        <LinearLayout
            android:id="@+id/login_down"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <!-- 制作单位 -->
            <TextView
                android:id="@+id/txtCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_company"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- CopyRight信息 -->
            <TextView
                android:id="@+id/txtCopyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_copyright"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
