<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item_recyclerview_concrete_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="@dimen/card_Corner_Radius"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="3dp">

        <!-- 顶部图形标题，数据所属组织机构 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">


            <TextView
                android:id="@+id/tv_organization_item_recyclerview_concrete_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="监理公司"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="16sp"
                android:textStyle="bold" />


            <!-- 右边显示拌合站数量 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tv_site_count_item_recyclerview_concrete_fragment"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/design_blue_point"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="站"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_machine_count_item_recyclerview_concrete_fragment"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/design_blue_point"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="机"
                    android:textColor="@color/secondary_text_default_material_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondary_text_default_material_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zongpanshu"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/tv_zongpanshu_item_recyclerview_concrete_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_87_percent_alpha"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zongfangliang"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/tv_zongfangliang_item_recyclerview_concrete_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_87_percent_alpha"
                android:textSize="17dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondary_text_default_material_light" />

        <!-- 表头部分：监理1标，总盘数，报警等级 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/alarm_level"
                android:textSize="15dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/overproof_count"
                android:textSize="15dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/overproof_rate"
                android:textSize="15dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/handle_count"
                android:textSize="15dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/handle_rate"
                android:textSize="15dp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondary_text_default_material_light" />

        <!-- 初级 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/elementary_ranking"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_elementary1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_elementary2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_elementary3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_elementary4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- 中级 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/middle_ranking"
                android:textColor="@color/orange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_middle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_middle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_middle3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_middle4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- 高级 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/high_ranking"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_high1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_high2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_high3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_high4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>